# docs/swagger.json
@@ -16,6 +16,7 @@
           "content": {
             "application/json": {
               "schema": {
+                "type": "object",
                 "properties": {
                   "email": {
                     "type": "string",
@@ -59,6 +60,70 @@
         "responses": {
           "200": {
             "description": "Logging out is successful"
+          }
+        }
+      }
+    },
+    "/register": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "description": "Register",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "encoding": {
+                "avatarUrl": {
+                  "contentType": "image/png, image/jpeg"
+                }
+              },
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "format": "email",
+                    "example": "serverigaram@gmail.com",
+                    "required": true
+                  },
+                  "password": {
+                    "type": "string",
+                    "format": "password",
+                    "example": "remidosol4434",
+                    "required": true
+                  },
+                  "avatarUrl": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "firstName": {
+                    "type": "string",
+                    "example": "John",
+                    "required": true
+                  },
+                  "lastName": {
+                    "type": "string",
+                    "example": "Doe",
+                    "required": true
+                  },
+                  "mobileNumber": {
+                    "type": "string",
+                    "pattern": "^(\\+\\d{1,3}[- ]?)?\\d{10}$",
+                    "example": "+905301176240",
+                    "required": true
+                  }
+                }
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "You successfully registered."
           }
         }
       }
